[package]
name = "aesirx_web3_demo"
version = "1.0.0-alpha.1"
authors = [ "Tito Alvarez <augustoalvarez@gmail.com>" ]
edition = "2021"
license = "MPL-2.0"
description = "AesirX web3 demo smart contract"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
concordium-std = "5.1"
concordium-cis2 = "2.0"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
